# zn.nix

./: README.md  TODO.md  flake.nix
cljlib/z/: spinner.clj  style.clj  unicode.clj  util.clj
cljlib/z/spinner/: conway.clj  worm.clj
os/wsl/: configuration.nix
os/wsl/domain/bash/: bashrcExtra.sh  initExtra.sh
os/wsl/domain/bash/blesh/: init.sh
os/wsl/domain/fastfetch/: config.jsonc  logo.nix.  logo.nix.ascii
os/wsl/domain/firefox/: userChrome.css
os/wsl/domain/fish/: interactiveShellInit.fish
os/wsl/domain/hypr/: waybar.style.css
os/wsl/domain/nvim/: config.nix  filetype.vim  init.vim  neovide.nix
os/wsl/domain/polybar/: cava.sh  config.ini
os/wsl/domain/xmolib/: flake.nix  hie.yaml  xmolib.cabal
os/wsl/domain/xmolib/nix/modules/flake-parts/: devshell.nix  haskell.nix
os/wsl/domain/xmolib/src/Xmolib/Entry/: Xmoctrl.hs  Xmonad.hs
os/wsl/domain/xonsh/rc.d/: config.py  init.xsh
wait-for/: deps-lock.json  deps.edn  flake.nix
wait-for/.graal-support/: jni.json  reachability-metadata.json  resources.json
wait-for/src/wait_for/: core.clj
zflake/: deps-lock.json  deps.edn
zflake/.clj-kondo/.cache/v1/clj/: cljs.core.async.impl.ioc-macros.transit.json  cljs.core.async.interop.transit.json  cljs.core.async.macros.transit.json  cljs.core.async.transit.json  cljs.tools.reader.reader-types.transit.json  clojure.core.async.impl.buffers.transit.json  clojure.core.async.impl.channels.transit.json  clojure.core.async.impl.concurrent.transit.json  clojure.core.async.impl.dispatch.transit.json  clojure.core.async.impl.exec.threadpool.transit.json  clojure.core.async.impl.go.transit.json  clojure.core.async.impl.ioc-macros.transit.json  clojure.core.async.impl.mutex.transit.json  clojure.core.async.impl.protocols.transit.json  clojure.core.async.impl.timers.transit.json  clojure.core.async.lab.transit.json  clojure.core.async.transit.json  clojure.core.transit.json  (+99 more)
zflake/.cpcache/: 3234720426.basis  3234720426.cp  4171222510.basis  4171222510.cp
zflake/src/: zflake.clj
zflake/src/zflake/: core.clj
(+1026 files in other folders)
